Blender Crash if NLA tweak mode is enable for linked Armatures #119615

Closed
opened 2024-03-18 09:48:22 +01:00 by rafek yousef · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: (newest version of Blender that worked as expected)

Short description of error
if you linked any Armature to a blender project and enter tweak mode in NLA and save it, and open it again and try to insert any key frame blender will crash unleas you exit tweak mode and enter it again for all entered tweak mode armtures
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error
crean an Armature and make any key frames and Push down it to NLA then save the file, try to link that Armature to a new blender file, Make library overredden and enter tweak mode and make that action single user to be able to modify it, save the file and open it again try to isert any key frame, blender will crash

  • download the two attached files
  • open "Linked.blend" and press I to insert key frame
  • blender will crash

this issue is the same on blender 3.6 but in 3.3 blender do not crash but give a message

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: (newest version of Blender that worked as expected) **Short description of error** if you linked any Armature to a blender project and enter tweak mode in NLA and save it, and open it again and try to insert any key frame blender will crash unleas you exit tweak mode and enter it again for all entered tweak mode armtures [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** crean an Armature and make any key frames and Push down it to NLA then save the file, try to link that Armature to a new blender file, Make library overredden and enter tweak mode and make that action single user to be able to modify it, save the file and open it again try to isert any key frame, blender will crash - download the two attached files - open "Linked.blend" and press I to insert key frame - blender will crash this issue is the same on blender 3.6 but in 3.3 blender do not crash but give a message
rafek yousef added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-03-18 09:48:23 +01:00
Member

Hi, thanks for the report. I can confirm. Haven't checked in debug build but guessing r_tweak_strip is null here

Hi, thanks for the report. I can confirm. Haven't checked in debug build but guessing `r_tweak_strip` is null here
Sybren A. Stüvel added this to the 4.1 milestone 2024-03-18 15:17:42 +01:00
Sybren A. Stüvel self-assigned this 2024-03-18 15:17:46 +01:00

Turns out, it's actually adt->actstrip that's null. You can see this in the NLA editor as well, once you know what to look for:

Tweak mode disabled:

image

Tweak mode enabled:

image

Crashing blend file is a weird mix:

image

Turns out, it's actually `adt->actstrip` that's null. You can see this in the NLA editor as well, once you know what to look for: #### Tweak mode disabled: ![image](/attachments/2eb6838f-9ca5-4668-913b-16af07c60256) #### Tweak mode enabled: ![image](/attachments/5c519aa8-0ea7-4941-8d9a-6288188b3d86) #### Crashing blend file is a weird mix: ![image](/attachments/485ec9d7-a011-4f31-9253-813625201cf5)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 10:45:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119615
No description provided.